fix css on mobile

--- a/src/components/Skill.module.css
+++ b/src/components/Skill.module.css
@@ -47,6 +47,10 @@
   border-width: 2px;
 }
 
+.cardHide {
+  visibility: hidden;
+}
+
 .card img {
   width: 20px;
 }
